FlaskGen/FlaskParser.java
// Generated from FlaskParser.g4 by ANTLR 4.13.1
package FlaskGen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		APP_ROUTE=1, DEF=2, RETURN=3, FROM=4, IMPORT=5, CLASS=6, TEMPLATE_KW=7, 
		STYLES=8, IF=9, ELIF=10, ELSE=11, ENDIF=12, FOR=13, IN=14, ENDFOR=15, 
		BLOCK=16, ENDBLOCK=17, EXTENDS=18, INCLUDE=19, SET=20, NOT=21, AND=22, 
		OR=23, IS=24, TRUE=25, FALSE=26, NONE=27, NULL=28, SELF_CLOSE=29, CLOSE_TAG=30, 
		LT=31, GT=32, SLASH=33, BLOCK_START=34, BLOCK_END=35, COMMENT_START=36, 
		COMMENT_END=37, TEMPLATE_EXPRESSION=38, TRIPLE_QUOTE_STRING=39, LCURLEBRACE=40, 
		RCURLEBRACE=41, LSQBRACKET=42, RSQBRACKET=43, LPAREN=44, RPAREN=45, COLON=46, 
		COMMA=47, DOT=48, SEMICOLON=49, PIPE=50, STAR=51, PLUS=52, MINUS=53, PERCENT=54, 
		TILDE=55, QUESTION_MARK=56, AT=57, HASH=58, EQUAL=59, BACKTICK=60, EQEQ=61, 
		NOTEQ=62, LTE=63, GTE=64, CSS_CUSTOM_PROPERTY=65, DUNDER_NAME=66, IDENTIFIER=67, 
		STRING=68, NUMBER=69, PY_COMMENT=70, WS=71, LINE_COMMENT=72, BLOCK_COMMENT=73;
	public static final int
		RULE_application = 0, RULE_importStatement = 1, RULE_appDeclaration = 2, 
		RULE_globalAssignment = 3, RULE_dictLiteral = 4, RULE_dictEntry = 5, RULE_routeDefinition = 6, 
		RULE_routeDecorator = 7, RULE_parameterList = 8, RULE_routeBody = 9, RULE_bodyStatement = 10, 
		RULE_ifBlock = 11, RULE_innerBodyStatement = 12, RULE_mainGuard = 13, 
		RULE_pyExpression = 14, RULE_pyAtom = 15, RULE_pyOp = 16, RULE_pyInner = 17, 
		RULE_literal = 18, RULE_htmlDocument = 19, RULE_htmlElement = 20, RULE_startTag = 21, 
		RULE_endTag = 22, RULE_selfClosingTag = 23, RULE_htmlContent = 24, RULE_textToken = 25, 
		RULE_jinja2Block = 26, RULE_tagName = 27, RULE_attribute = 28, RULE_attributeValue = 29, 
		RULE_expression = 30, RULE_cssContent = 31, RULE_cssRule = 32, RULE_cssSelector = 33, 
		RULE_cssDeclaration = 34, RULE_cssValue = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"application", "importStatement", "appDeclaration", "globalAssignment", 
			"dictLiteral", "dictEntry", "routeDefinition", "routeDecorator", "parameterList", 
			"routeBody", "bodyStatement", "ifBlock", "innerBodyStatement", "mainGuard", 
			"pyExpression", "pyAtom", "pyOp", "pyInner", "literal", "htmlDocument", 
			"htmlElement", "startTag", "endTag", "selfClosingTag", "htmlContent", 
			"textToken", "jinja2Block", "tagName", "attribute", "attributeValue", 
			"expression", "cssContent", "cssRule", "cssSelector", "cssDeclaration", 
			"cssValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@app.route'", "'def'", "'return'", "'from'", "'import'", "'class'", 
			"'template'", "'styles'", "'if'", "'elif'", "'else'", "'endif'", "'for'", 
			"'in'", "'endfor'", "'block'", "'endblock'", "'extends'", "'include'", 
			"'set'", "'not'", "'and'", "'or'", "'is'", null, null, null, "'null'", 
			"'/>'", "'</'", "'<'", "'>'", "'/'", "'{%'", "'%}'", "'{#'", "'#}'", 
			null, null, "'{'", "'}'", "'['", "']'", "'('", "')'", "':'", "','", "'.'", 
			"';'", "'|'", "'*'", "'+'", "'-'", "'%'", "'~'", "'?'", "'@'", "'#'", 
			"'='", "'`'", "'=='", "'!='", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "APP_ROUTE", "DEF", "RETURN", "FROM", "IMPORT", "CLASS", "TEMPLATE_KW", 
			"STYLES", "IF", "ELIF", "ELSE", "ENDIF", "FOR", "IN", "ENDFOR", "BLOCK", 
			"ENDBLOCK", "EXTENDS", "INCLUDE", "SET", "NOT", "AND", "OR", "IS", "TRUE", 
			"FALSE", "NONE", "NULL", "SELF_CLOSE", "CLOSE_TAG", "LT", "GT", "SLASH", 
			"BLOCK_START", "BLOCK_END", "COMMENT_START", "COMMENT_END", "TEMPLATE_EXPRESSION", 
			"TRIPLE_QUOTE_STRING", "LCURLEBRACE", "RCURLEBRACE", "LSQBRACKET", "RSQBRACKET", 
			"LPAREN", "RPAREN", "COLON", "COMMA", "DOT", "SEMICOLON", "PIPE", "STAR", 
			"PLUS", "MINUS", "PERCENT", "TILDE", "QUESTION_MARK", "AT", "HASH", "EQUAL", 
			"BACKTICK", "EQEQ", "NOTEQ", "LTE", "GTE", "CSS_CUSTOM_PROPERTY", "DUNDER_NAME", 
			"IDENTIFIER", "STRING", "NUMBER", "PY_COMMENT", "WS", "LINE_COMMENT", 
			"BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ApplicationContext extends ParserRuleContext {
		public ApplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_application; }
	 
		public ApplicationContext() { }
		public void copyFrom(ApplicationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ApplicationRootContext extends ApplicationContext {
		public AppDeclarationContext appDeclaration() {
			return getRuleContext(AppDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FlaskParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<GlobalAssignmentContext> globalAssignment() {
			return getRuleContexts(GlobalAssignmentContext.class);
		}
		public GlobalAssignmentContext globalAssignment(int i) {
			return getRuleContext(GlobalAssignmentContext.class,i);
		}
		public List<RouteDefinitionContext> routeDefinition() {
			return getRuleContexts(RouteDefinitionContext.class);
		}
		public RouteDefinitionContext routeDefinition(int i) {
			return getRuleContext(RouteDefinitionContext.class,i);
		}
		public MainGuardContext mainGuard() {
			return getRuleContext(MainGuardContext.class,0);
		}
		public ApplicationRootContext(ApplicationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterApplicationRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitApplicationRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitApplicationRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApplicationContext application() throws RecognitionException {
		ApplicationContext _localctx = new ApplicationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_application);
		int _la;
		try {
			_localctx = new ApplicationRootContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FROM) {
				{
				{
				setState(72);
				importStatement();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			appDeclaration();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(79);
				globalAssignment();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				routeDefinition();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==APP_ROUTE );
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(90);
				mainGuard();
				}
			}

			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	 
		public ImportStatementContext() { }
		public void copyFrom(ImportStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportDefContext extends ImportStatementContext {
		public TerminalNode FROM() { return getToken(FlaskParser.FROM, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FlaskParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FlaskParser.IDENTIFIER, i);
		}
		public TerminalNode IMPORT() { return getToken(FlaskParser.IMPORT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FlaskParser.COMMA, i);
		}
		public ImportDefContext(ImportStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterImportDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitImportDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitImportDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		int _la;
		try {
			_localctx = new ImportDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(FROM);
			setState(96);
			match(IDENTIFIER);
			setState(97);
			match(IMPORT);
			setState(98);
			match(IDENTIFIER);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(99);
				match(COMMA);
				setState(100);
				match(IDENTIFIER);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppDeclarationContext extends ParserRuleContext {
		public AppDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appDeclaration; }
	 
		public AppDeclarationContext() { }
		public void copyFrom(AppDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppDefContext extends AppDeclarationContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(FlaskParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FlaskParser.IDENTIFIER, i);
		}
		public TerminalNode EQUAL() { return getToken(FlaskParser.EQUAL, 0); }
		public TerminalNode LPAREN() { return getToken(FlaskParser.LPAREN, 0); }
		public TerminalNode DUNDER_NAME() { return getToken(FlaskParser.DUNDER_NAME, 0); }
		public TerminalNode RPAREN() { return getToken(FlaskParser.RPAREN, 0); }
		public AppDefContext(AppDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterAppDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitAppDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitAppDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppDeclarationContext appDeclaration() throws RecognitionException {
		AppDeclarationContext _localctx = new AppDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_appDeclaration);
		try {
			_localctx = new AppDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(IDENTIFIER);
			setState(107);
			match(EQUAL);
			setState(108);
			match(IDENTIFIER);
			setState(109);
			match(LPAREN);
			setState(110);
			match(DUNDER_NAME);
			setState(111);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalAssignmentContext extends ParserRuleContext {
		public GlobalAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalAssignment; }
	 
		public GlobalAssignmentContext() { }
		public void copyFrom(GlobalAssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalListDefContext extends GlobalAssignmentContext {
		public TerminalNode IDENTIFIER() { return getToken(FlaskParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(FlaskParser.EQUAL, 0); }
		public TerminalNode LSQBRACKET() { return getToken(FlaskParser.LSQBRACKET, 0); }
		public List<DictLiteralContext> dictLiteral() {
			return getRuleContexts(DictLiteralContext.class);
		}
		public DictLiteralContext dictLiteral(int i) {
			return getRuleContext(DictLiteralContext.class,i);
		}
		public TerminalNode RSQBRACKET() { return getToken(FlaskParser.RSQBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FlaskParser.COMMA, i);
		}
		public GlobalListDefContext(GlobalAssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterGlobalListDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitGlobalListDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitGlobalListDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalAssignmentContext globalAssignment() throws RecognitionException {
		GlobalAssignmentContext _localctx = new GlobalAssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globalAssignment);
		int _la;
		try {
			_localctx = new GlobalListDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IDENTIFIER);
			setState(114);
			match(EQUAL);
			setState(115);
			match(LSQBRACKET);
			setState(116);
			dictLiteral();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(117);
				match(COMMA);
				setState(118);
				dictLiteral();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(RSQBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DictLiteralContext extends ParserRuleContext {
		public DictLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dictLiteral; }
	 
		public DictLiteralContext() { }
		public void copyFrom(DictLiteralContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DictDefContext extends DictLiteralContext {
		public TerminalNode LCURLEBRACE() { return getToken(FlaskParser.LCURLEBRACE, 0); }
		public TerminalNode RCURLEBRACE() { return getToken(FlaskParser.RCURLEBRACE, 0); }
		public List<DictEntryContext> dictEntry() {
			return getRuleContexts(DictEntryContext.class);
		}
		public DictEntryContext dictEntry(int i) {
			return getRuleContext(DictEntryContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FlaskParser.COMMA, i);
		}
		public DictDefContext(DictLiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterDictDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitDictDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitDictDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DictLiteralContext dictLiteral() throws RecognitionException {
		DictLiteralContext _localctx = new DictLiteralContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dictLiteral);
		int _la;
		try {
			_localctx = new DictDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LCURLEBRACE);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(127);
				dictEntry();
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(128);
					match(COMMA);
					setState(129);
					dictEntry();
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(137);
			match(RCURLEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DictEntryContext extends ParserRuleContext {
		public DictEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dictEntry; }
	 
		public DictEntryContext() { }
		public void copyFrom(DictEntryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DictEntryDefContext extends DictEntryContext {
		public TerminalNode STRING() { return getToken(FlaskParser.STRING, 0); }
		public TerminalNode COLON() { return getToken(FlaskParser.COLON, 0); }
		public PyExpressionContext pyExpression() {
			return getRuleContext(PyExpressionContext.class,0);
		}
		public DictEntryDefContext(DictEntryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterDictEntryDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitDictEntryDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitDictEntryDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DictEntryContext dictEntry() throws RecognitionException {
		DictEntryContext _localctx = new DictEntryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dictEntry);
		try {
			_localctx = new DictEntryDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(STRING);
			setState(140);
			match(COLON);
			setState(141);
			pyExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
